implemented image upload integration